# limo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install_repos.sh  package.xml
demo_keyframe_bundle_adjustment_meta/: .gitignore  CMakeLists.txt  package.xml
demo_keyframe_bundle_adjustment_meta/apps/: kittibag.cpp  main.cpp  main_program.cpp
demo_keyframe_bundle_adjustment_meta/apps/main_program/: main_program.cpp  utility.h
demo_keyframe_bundle_adjustment_meta/launch/: feature_matching.launch  keyframe_ba_monolid.launch  kitti_mono_standalone.launch  kitti_standalone.launch  matches_viewer.launch  run_deterministic.launch  semantic_labels.launch  tf2_static_aliases_kitti.launch
demo_keyframe_bundle_adjustment_meta/res/: config_feature_matching.yaml  config_tracklets_depth_ros_tool.yaml  default.rviz  kitti.rviz  mono_lidar_fusion_parameters.yaml
demo_keyframe_bundle_adjustment_meta/src/: kttibag_test.cpp
docker/: Dockerfile  docker-compose.override.template.yml  entry.sh  (+3 more)
keyframe_bundle_adjustment/: CMakeLists.txt  README.md  package.xml
keyframe_bundle_adjustment/include/keyframe_bundle_adjustment/: bundle_adjuster_keyframes.hpp  keyframe.hpp  keyframe_selector.hpp  landmark_selection_schemes.hpp  landmark_selector.hpp  matches_msg_types.hpp
keyframe_bundle_adjustment/include/keyframe_bundle_adjustment/internal/: cost_functors_ceres.hpp  definitions.hpp  landmark_selection_scheme_add_depth.hpp  landmark_selection_scheme_base.hpp  landmark_selection_scheme_cheirality.hpp  landmark_selection_scheme_dimension_plausibility.hpp  landmark_selection_scheme_helpers.hpp  landmark_selection_scheme_observability.hpp  landmark_selection_scheme_random.hpp  landmark_selection_scheme_voxel.hpp  local_parameterizations.hpp  motion_model_regularization.hpp  tracklet.hpp  tracklets.hpp
keyframe_bundle_adjustment/python_api/: keyframe_bundle_adjustment_mono.cpp
keyframe_bundle_adjustment/src/: bundle_adjuster_keyframes.cpp  definitions.cpp  keyframe.cpp  keyframe_rejection_scheme_flow.cpp  keyframe_selection_scheme_pose.cpp  keyframe_selector.cpp  landmark_selection_scheme_cheirality.cpp  landmark_selection_scheme_helpers.cpp  landmark_selection_scheme_observability.cpp  landmark_selection_scheme_voxel.cpp
keyframe_bundle_adjustment/test/: keyframe_bundle_adjustment.cpp
keyframe_bundle_adjustment_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
keyframe_bundle_adjustment_ros_tool/cfg/: MonoLidar.rosif  MonoStandalone.rosif
keyframe_bundle_adjustment_ros_tool/launch/: mono_lidar_node.launch  mono_lidar_nodelet.launch
keyframe_bundle_adjustment_ros_tool/launch/params/: mono_standalone_parameters.yaml
keyframe_bundle_adjustment_ros_tool/notebook/: bundle_adjustment_notebook.py
keyframe_bundle_adjustment_ros_tool/python_api/: keyframe_bundle_adjustment_mono.cpp
keyframe_bundle_adjustment_ros_tool/res/: kitti_eval_script.sh  tune_parameters_kitti.py
keyframe_bundle_adjustment_ros_tool/src/commons/: color_by_index_hsv.hpp  general_helpers.hpp  motion_extrapolator.hpp  publish_helpers.hpp
keyframe_bundle_adjustment_ros_tool/src/mono_lidar/: mono_lidar.cpp  mono_lidar.hpp
keyframe_bundle_adjustment_ros_tool/src/mono_standalone/: mono_standalone.cpp  mono_standalone.hpp
keyframe_bundle_adjustment_ros_tool/test/: mono_lidar_node.cpp  mono_lidar_node.test  mono_lidar_nodelet.cpp  mono_standalone_node.test  mono_standalone_nodelet.test
limo/: CMakeLists.txt  package.xml
matches_msg_conversions_ros/: CMakeLists.txt  README.md  package.xml
matches_msg_conversions_ros/include/matches_msg_conversions_ros/: convert.hpp  convert_opencv3.hpp
matches_msg_conversions_ros/src/: convert.cpp  convert_opencv3.cpp
matches_msg_conversions_ros/test/: test_matches_msg_conversions_ros.cpp  test_matches_msg_conversions_ros.test
matches_msg_types/: .gitlab-ci.yml  README.md  package.xml
matches_msg_types/include/matches_msg_types/: feature_point.hpp  tracklet.hpp  tracklets.hpp
matches_msg_types/python_api/: matches_msg.cpp
matches_msg_types/test/: matches_msg_types.cpp
robust_optimization/: .gitignore  CMakeLists.txt  README.md  package.xml
robust_optimization/include/robust_optimization/: robust_solving.hpp
robust_optimization/src/: robust_solving.cpp
robust_optimization/test/: robust_optimization.cpp
src/limo/: CMakeLists.txt
src/limo/demo_keyframe_bundle_adjustment_meta/: CMakeLists.txt  README.md  package.xml
src/limo/demo_keyframe_bundle_adjustment_meta/apps/main_program/: main_program.cpp
src/limo/demo_keyframe_bundle_adjustment_meta/launch/: feature_matching.launch  mono_standalone_kitti.launch  tf2_static_aliases_kitti.launch
src/limo/demo_keyframe_bundle_adjustment_meta/res/: config_feature_matching.yaml
src/limo/keyframe_bundle_adjustment/: CMakeLists.txt  package.xml
src/limo/keyframe_bundle_adjustment/src/: keyframe.cpp  keyframe_sparsification_scheme_time.cpp  landmark_selection_scheme_add_depth.cpp  landmark_selection_scheme_helpers.cpp  landmark_selection_scheme_observability.cpp  landmark_selection_scheme_random.cpp  landmark_selection_scheme_voxel.cpp
src/limo/keyframe_bundle_adjustment_ros_tool/: CMakeLists.txt  package.xml
src/limo/keyframe_bundle_adjustment_ros_tool/cfg/: MonoStandalone.rosif
src/limo/keyframe_bundle_adjustment_ros_tool/launch/: mono_standalone_node.launch  mono_standalone_nodelet.launch
src/limo/keyframe_bundle_adjustment_ros_tool/res/: kitti_eval_script.py  kitti_eval_script.sh  outlier_labels.yaml
src/limo/keyframe_bundle_adjustment_ros_tool/test/: mono_lidar_node.cpp  mono_lidar_nodelet.test  mono_standalone_node.cpp  mono_standalone_nodelet.cpp
src/limo/matches_msg_types/: CMakeLists.txt
src/limo/pointcloud plotting/: accumulate_lidar_pcl_from_trajectory_estimate.py  vtk_pointcloud.py  vtk_viewer.py
src/limo/robust_optimization/: README.md  package.xml
src/limo/util_nodes_tf2_ros_tool/: package.xml
src/limo/util_nodes_tf2_ros_tool/launch/: static_transform_alias_node.launch
src/limo/util_nodes_tf2_ros_tool/test/: test_util_nodes_tf2_ros_tool.cpp
(+61 files in other folders)
