<?xml version="1.0"?>
<package format="2">
  <name>keyframe_bundle_adjustment</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>contact-the-maintainer</license>
  <maintainer email="johannes.graeter@kit.edu">Johannes Graeter</maintainer>
  <author email="johannes.graeter@kit.edu">Johannes Graeter</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/graeter/keyframe_bundle_adjustment.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>eigen</depend>
  <depend>ceres</depend>
  <depend>pcl</depend> <!--For voxelization in landmark selection-->
  <depend>opencv</depend>
  <depend>matches_msg_types</depend>
  <depend>robust_optimization</depend>
  <depend>boost</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
