<?xml version="1.0"?>
<package format="2">
  <name>matches_msg_conversions_ros</name>
  <version>0.0.0</version>
  <description>Interface between rmatches msg from ros and common types.</description>

  <license>GPLv3</license>
  <maintainer email="johannes.graeter@gmail.com">Johannes Graeter</maintainer>
  <author email="johannes.graeter@gmail.com">Johannes Graeter</author>
  <url type="repository">http://github.com/johannes-graeter/limo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->
  
  <!--<test_depend>opencv</test_depend>-->
  <depend>mrt_opencv</depend>
  <depend>matches_msg_ros</depend>
  <depend>matches_msg_depth_ros</depend>
  <depend>keyframe_bundle_adjustment</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
